--- a/matrix_analysis.ipynb
+++ b/matrix_analysis.ipynb
@@ -162,10 +162,10 @@
    "outputs": [],
    "source": [
     "'''\n",
-    "function to load the csv\n",
+    "Function to load the csv.\n",
     "path_ is the path of a file. ONLY ONE\n",
-    "delimiter_ is the delimiter in the csv file, like ','\n",
-    "the returned object is a pandas DataFrame\n",
+    "Delimiter_ is the delimiter in the csv file, like ','.\n",
+    "The returned object is a pandas DataFrame.\n",
     "'''\n",
     "def load(path_, delimiter_) :\n",
     "    \n",
@@ -175,8 +175,8 @@
     "    return csv\n",
     "\n",
     "'''\n",
-    "function to load a whole directory\n",
-    "same as load\n",
+    "Function to load a whole directory.\n",
+    "Same as load.\n",
     "'''\n",
     "def load_directory(path_, delimiter_) :\n",
     "\n",
@@ -195,8 +195,8 @@
     "    return list_files\n",
     "\n",
     "'''\n",
-    "Allow you to write the csv on the disk\n",
-    "the csv_ is the dataframe\n",
+    "Allow you to write the csv on the disk.\n",
+    "The csv_ is the dataframe.\n",
     "name_ is the path and name, like 'my/folder/soup.csv'\n",
     "'''\n",
     "def save(csv_, name_) :\n",
@@ -211,12 +211,11 @@
     "### Useful\n",
     "\n",
     "'''\n",
-    "function to transform the dataframe\n",
+    "Function to transform the dataframe\n",
     "into a numpy matrix.\n",
     "For maths purpose\n",
-    "but loose the labels\n",
+    "but loose the labels.\n",
     "matrix_ is the dataframe from \"load\" function\n",
-    "TODO: return a copy of the labels to put them again after\n",
     "'''\n",
     "def to_numpy(matrix_) :\n",
     "    \n",
@@ -225,8 +224,8 @@
     "    return np_matrix\n",
     "\n",
     "'''\n",
-    "function to transform the numpy array\n",
-    "back to a dataframe\n",
+    "Function to transform the numpy array\n",
+    "back to a dataframe.\n",
     "matrix_ is a numpy array\n",
     "and header_ is the name of the columns/rows. It need to start with 'Row'\n",
     "'''\n",
@@ -239,16 +238,16 @@
     "    return df\n",
     "\n",
     "'''\n",
-    "Transform a list of numpy array matrix into a list of cell\n",
-    "Allow the applications of statistical test\n",
-    "The lenght of the list is equal to the shape of the matrix\n",
+    "Transform a list of numpy array matrix into a list of cell.\n",
+    "Allow the applications of statistical test.\n",
+    "The lenght of the list is equal to the shape of the matrix.\n",
     "'''\n",
     "def to_list(matrix_list_) :\n",
     "    \n",
     "    shape = matrix_list_[0].shape\n",
     "    length = len(matrix_list_)\n",
     "\n",
-    "    # big ugly 3D matrix that will store every cell\n",
+    "    # 3D matrix that will store every cell\n",
     "    # first and second identier should be the same place\n",
     "    # the third is the position of the initial list\n",
     "    output_list = [[[0.0] * length] * shape[0]] * shape[1]\n",
@@ -271,7 +270,7 @@
     "    if isinstance(labels_, list) :\n",
     "        label_list = matrix_.columns.to_list()\n",
     "        if len(label_list) != len(labels_) :\n",
-    "            raise ValueError(\"The number of labels passed mismatch the number of labels in the matrix! IF you want to rename only some labels, use the dictionnary form! See: https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.rename.html\")\n",
+    "            raise ValueError(\"The number of labels passed mismatch the number of labels in the matrix! If you want to rename only some labels, use the dictionnary form! See: https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.rename.html\")\n",
     "        labels = {}\n",
     "        for prev, new in zip(label_list, labels_) :\n",
     "            labels[prev] = new\n",
@@ -284,7 +283,7 @@
     "\n",
     "'''\n",
     "Function to reorder the labels in both column and line way.\n",
-    "This can also remove unwanted columns and lines if they are not present in the label list\n",
+    "This can also remove unwanted columns and lines if they are not present in the label list.\n",
     "Takes a matrix and the labels in the new order.\n",
     "'''\n",
     "def reorder(matrix_, labels_) : \n",
@@ -307,9 +306,9 @@
     "### Statistics\n",
     "\n",
     "'''\n",
-    "Compute the mean of a list of matrix\n",
-    "the csv_list_ is a list of pandas dataframe\n",
-    "from the function \"load\"\n",
+    "Compute the mean of a list of matrix.\n",
+    "The csv_list_ is a list of pandas dataframe\n",
+    "from the function \"load\".\n",
     "'''\n",
     "def mean(csv_list_) :\n",
     "\n",
